[package]
name = "scribe-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
walkdir = "2.5"
base64 = "0.22"
anyhow = "1.0"
image = "0.25"
futures = "0.3"
mupdf = "0.5"
indicatif = "0.17"
tempfile = "3.10"
uuid = { version = "1.8", features = ["v4"] } # useful for tmp files if not using tempfile crate direct
dotenvy = "0.15"
